<resources>
    <string name="app_name">Running Tracker</string>

    <!--  service notification  -->
    <string name="notification_title">Recording Steps</string>
    <string name="notification_text">Running Tracker is counting your steps</string>

    <!--  home fragment  -->
    <string name="btnStart">Start</string>
    <string name="btnStop">Stop</string>
    <string name="status_sleeping">Sleeping</string>
    <string name="status_standing">Standing</string>
    <string name="status_walking">Walking</string>
    <string name="status_jogging">Jogging</string>
    <string name="status_running">Running</string>
    <string name="status_cycling">Cycling</string>
    <string name="status_too_fast">Too Fast</string>

    <!--  stats fragment  -->
    <string name="group_by_date_track_item_date">Date</string>
    <string name="group_by_date_track_item_distance">Total Distance</string>
    <string name="group_by_date_track_item_avg_speed">Avg Speed</string>
    <string name="group_by_date_track_item_max_speed">Max Speed</string>
    <string name="group_by_date_track_item_records">Records Count</string>

    <!--  dialog  -->
    <string name="alert_dialog_text_view">Goal</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>

    <!--  unit  -->
    <string name="zero">0</string>
    <string name="dash">-</string>
    <string name="slash">/</string>
    <string name="meter_per_second">m/s</string>
    <string name="meter">m</string>
    <string name="invalid_value">Invalid Value</string>
    <string name="dialog_goal_value_not_large_enough">Value Cannot be lower than </string>
    <string name="are_you_sure_to_delete_all_data">Are you sure to delete all data?</string>
    <string name="swipe_data">Swipe Data</string>
</resources>